# agent-os

./: .gitignore  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  BETA_COHORT.md  BETA_TESTING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LAYOUT.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  PRIVACY.md  PUBLIC_BETA_RELEASE.md  README.md  RELEASE_REHEARSAL.md  REMOTE_BETA_MATRIX.md  REMOTE_HERMES.md  ROAD_TO_BETA.md  SECURITY.md  SUPPORT.md  agent-os.toml  agent_console_artifacts.py  agent_console_attachments.py  agent_os_lifecycle.py  agent_run_history.py  command_manifest.py  data_backup_restore.py  data_layout.py  data_migration.py  data_schema.py  diagnostics_bundle.py  health_checks.py  hermes_kanban.py  hermes_profile_creation.py  hermes_profile_deletion.py  hermes_profile_identity.py  hermes_profiles.py  hermes_provider_switching.py  (+25 more)
.github/: CODEOWNERS  pull_request_template.md
data/: agent_messages.json  agents.json  attention.json  calendar.json  dashboard.json  projects.json  tasks.json
docs/: compact-dark-dashboard-design.md  modularization-plan.md  react-readiness.md  website-to-agent-messaging-plan.md  wilson-code-review-2026-06-25.md
mentat/: __init__.py  cli.py  version.py
packaging/: README.md  mentat.spec  mentat_native.py
public/: app.js  core.js  index.html  styles.css
reviews/: 2026-07-16-beta-remote-contract.md  2026-07-17-beta-0-release-contract.md  2026-07-17-beta-1a-data-layout-contract.md  2026-07-17-beta-1b-data-root-preflight.md  2026-07-17-beta-ci-guardrail.md  2026-07-18-beta-1b-data-root-initializer.md  2026-07-18-beta-1c-legacy-migration.md  2026-07-18-beta-1d-data-schema.md  2026-07-18-beta-1e-durable-backup-restore.md  2026-07-18-beta-1e-private-console-state.md  2026-07-18-beta-1f-upgrade-uninstall-preservation.md  2026-07-19-beta-2a-remote-hermes-foundation.md  2026-07-19-beta-2g-remote-capability-inventory.md  2026-07-20-beta-2-real-hermes-contracts.md  2026-07-20-beta-2-review-findings.md  2026-07-20-beta-2b-transport-adapter.md  2026-07-20-beta-2c-remote-console-runs.md  2026-07-20-beta-2d-remote-approval-responses.md  2026-07-20-beta-2d-upstream-approval-binding.md  (+17 more)
scripts/: agent_heartbeat.py  (+10 more)
(+90 files in other folders)
